# wgutil

./: .gitignore  README.md  pyproject.toml
src/wgutil/: cli.py  iface.py  peer.py  wg.py
