[project]
name = "wgutil"
version = "0.0.3"
authors = [
  { name="qq1u", email="609799548@qq.com" },
]
description = "wireguard util"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "psutil",
    "qrcode",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/qq1u/wgutil"
Issues = "https://github.com/qq1u/wgutil/issues"

[project.scripts]
wgutil = "wgutil.cli:main"
